--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,7 @@
 backend:
-  name: git-gateway
-  branch: main
+     name: github
+       repo: m2studioscbe-dotcom/m2studios-website
+       branch: main
 
 media_folder: "images/uploads"
 public_folder: "/images/uploads"
