--- a/admin/config.yml
+++ b/admin/config.yml
@@ -1,6 +1,6 @@
 backend:
-  name: github
-  repo: m2studioscbe-dotcom/m2studios-website
+    name: git-gateway
+
   branch: main
 
 media_folder: "images/uploads"
